# fsevents-api

./: .gitignore  FSEvents.hs  LICENSE  Main.hs  Makefile  Watcher.c  Watcher.h  Watcher.m  build.sh  fs-events.cabal  main.m  simple_fs_events.m
System/: FSEvents.hs
examples/: Main.hs
objc/: Watcher.h  Watcher.m  main.m
src/System/: FSEvents.hs
