Name:                fs-events
Version:             0.1
Synopsis:            A haskell binding to the FSEvents API
Homepage:            http://github.com/nkpart/fs-events
License:             BSD3
License-file:        LICENSE
Author:              Nick Partridge
Maintainer:          nkpart@gmail.com
Copyright:           2012, Nick Partridge
Category:            System
Build-type:          Simple
Extra-source-files:  objc, examples
Cabal-version:       >=1.2

Library
  Exposed-modules:     System.FSEvents
  Build-depends:       base >= 4
  if !impl(GHC >= 7.2.1)
    Buildable: False

  hs-source-dirs: src
  C-sources: objc/Watcher.m
  Include-dirs: objc
