Name:                fs-events
Version:             0.1
Synopsis:            A haskell binding to the FSEvents API
Homepage:            http://github.com/nkpart/fs-events
License:             BSD3
License-file:        LICENSE
Author:              Nick Partridge
Maintainer:          nkpart@gmail.com
Copyright:           2012, Nick Partridge
Category:            System
Build-type:          Simple
Extra-source-files:  Watcher.c, Watcher.h, examples
Cabal-version:       >=1.8

Library
  Exposed-modules:     System.FSEvents
  Build-depends:       base >= 4
  hs-source-dirs: src
  frameworks: CoreServices
  C-sources: Watcher.c
  CC-options: -msse2
  Include-dirs: .

Executable fsevents-test
  build-depends: fs-events, base
  main-is: examples/Main.hs
